<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"

        android:fitsSystemWindows="true"
        tools:context="com.example.instapost.Activities.SignUpActivity"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@color/colorPrimaryDark"
            android:gravity="center"
            android:orientation="vertical"
>


    <Button
            android:layout_width="@dimen/logo_w_h"
            android:layout_height="@dimen/logo_w_h"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/circle_button"
            android:text="@string/select_image"
            android:textColor="@color/colorAccent"
            android:contentDescription="@string/content_desc_logo"

            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="150dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="150dp"
            android:layout_marginTop="5dp" app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/select_image_button"
    />


    <de.hdodenhof.circleimageview.CircleImageView android:layout_width="@dimen/logo_w_h"
                                                  android:layout_height="@dimen/logo_w_h"
                                                  android:id="@+id/previewProfilePic"
                                                  android:src="@mipmap/default_avatar" app:civ_border_width="3dp"
                                                  app:civ_border_color="@color/white"
                                                  app:layout_constraintEnd_toEndOf="@+id/select_image_button"
                                                  app:layout_constraintStart_toStartOf="@+id/select_image_button"

                                                  app:layout_constraintBottom_toTopOf="@+id/textInputLayout"
                                                  app:layout_constraintTop_toTopOf="@+id/select_image_button"/>


    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            app:layout_constraintTop_toBottomOf="@+id/select_image_button" android:id="@+id/textInputLayout"
            android:layout_margin="0dp" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

        <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/namePlaceHolder"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@android:color/white" android:autofillHints="@string/emailPlaceHolder"/>
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:layout_marginTop="5dp"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout" android:id="@+id/textInputLayout2"
            android:layout_margin="0dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

        <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@android:color/white" android:autofillHints="@string/emailPlaceHolder"/>

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout2" android:id="@+id/textInputLayout3"
            android:layout_margin="0dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

        <EditText
                android:id="@+id/nickname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nicknamePlaceHolder"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@android:color/white" android:autofillHints="@string/nicknamePlaceHolder"/>

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout3" android:id="@+id/textInputLayout4"
            android:layout_margin="0dp" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

        <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusableInTouchMode="true"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@android:color/white" android:autofillHints="@string/passwordPlaceHolder"/>

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout4" android:id="@+id/textInputLayout5"
            android:layout_margin="0dp" app:layout_constraintEnd_toEndOf="parent">

        <EditText
                android:id="@+id/confirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusableInTouchMode="true"
                android:hint="@string/confirmPasswordPlaceHolder"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@android:color/white"
                android:autofillHints="@string/confirmPasswordPlaceHolder"/>

    </com.google.android.material.textfield.TextInputLayout>


    <Button
            android:id="@+id/sign_up_button"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:text="@string/action_sign_in_short"
            android:textColor="@android:color/black"
            android:textStyle="bold" android:layout_marginTop="15dp"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout5"
            app:layout_constraintStart_toStartOf="parent"/>

        <!-- Link to Login Screen -->

        <Button
                android:id="@+id/sign_in_button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:text="@string/btn_link_to_login"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:layout_marginTop="5dp" app:layout_constraintTop_toBottomOf="@+id/sign_up_button"
                android:layout_marginBottom="10dp" app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintVertical_bias="0.107" app:layout_constraintStart_toStartOf="parent"/>

    <ProgressBar
            android:id="@+id/createUserprogress"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center|bottom"
            android:visibility="gone"
            android:layout_marginTop="120dp"
            app:layout_constraintTop_toTopOf="@+id/textInputLayout" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="@+id/textInputLayout3" android:layout_marginBottom="120dp"
            app:layout_constraintBottom_toTopOf="@+id/sign_up_button"/>

</androidx.constraintlayout.widget.ConstraintLayout>


