<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"

        android:fitsSystemWindows="true"
        tools:context=".Fragments.CreatePost"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/colorPrimaryDark"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin">


    <Button
            android:id="@+id/select_image_button"
            android:layout_width="0dp"
            android:layout_height="30dp" android:text="@string/upload_image_prompt"
            android:background="@color/colorAccent"
            android:textColor="@android:color/black"
            android:textStyle="bold"

            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginTop="5dp" app:layout_constraintTop_toTopOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"/>


    <ImageView
            android:id="@+id/selected_image"
            android:layout_width="379dp"
            android:layout_height="@dimen/post_preview"
            android:layout_gravity="center_horizontal"
            android:src="@mipmap/prompt"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="5dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="5dp"
            app:layout_constraintHorizontal_bias="0.381" android:layout_marginBottom="40dp"
            app:layout_constraintBottom_toTopOf="@+id/textInputLayout6" android:layout_marginTop="50dp"
            app:layout_constraintTop_toTopOf="parent"/>

    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteX="0dp" android:id="@+id/textInputLayout6" android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/selected_image">

        <EditText
                android:id="@+id/caption"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/caption_text"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@android:color/white"/>

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteX="6dp" android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout6" android:id="@+id/textInputLayout7">

        <EditText
                android:id="@+id/hashtags"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusableInTouchMode="true"
                android:hint="@string/hashtag_prompt"
                android:inputType="text"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@android:color/white"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
            android:id="@+id/upload_button"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:text="@string/post_button"
            android:textColor="@android:color/black"
            android:textStyle="bold"

            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" android:layout_marginBottom="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
    />

    <ProgressBar
            android:id="@+id/uploadPostProgress"
            android:layout_width="match_parent"
            android:layout_height="25dp"

            android:layout_gravity="center|bottom"
            android:visibility="gone"

            tools:layout_editor_absoluteX="16dp" android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout7"/>


</androidx.constraintlayout.widget.ConstraintLayout>


